# src/api/routes.ts
@@ -51,6 +51,9 @@ const models: TsoaRoute.Models = {
             "macAddress": {"dataType":"string"},
             "ipAddress": {"dataType":"string"},
             "port": {"dataType":"string"},
+            "cpuUsagePercent": {"dataType":"string"},
+            "cpuIdle": {"dataType":"string"},
+            "cpuIdlePercent": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
